fixed issue with overlapping footer

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,16 @@
+.page-body {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  flex: 1 1 auto;
+}
+
 .page-title {
   text-align: center;
-  margin-top: 2em;
+  margin-top: 1.5em;
   margin-bottom: 1em;
   font-size: 1.5em;
-  font-weight: bold;
   color: #00838f;
 }
 
@@ -20,7 +27,6 @@
   border: solid 0.1em #00838f;
   border-radius: 1em;
   width: 15em;
-  margin: 0 auto;
 }
 
 .output-data {
@@ -28,10 +34,11 @@
 }
 
 .footer {
+  margin-top: 2em;
   text-align: center;
-  bottom: 0.1em;
-  position: fixed;
-  width: 100%;
+  bottom: 0;
+  position: static;
   color: #00838f;
   font-size: 1.1em;
+  width: 100%;
 }
